--- a/pagestyles.css
+++ b/pagestyles.css
@@ -6,20 +6,20 @@ body
   font-family: Arial;
   align-content: center;
   background-image: url("https://cdn.pixabay.com/photo/2018/10/16/07/07/stars-3750824_1280.png");
-  padding-left: 50px;
-  padding-right: 50px;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 #title
 {
   color: orange;
-  font-size: 70px;
+  font-size: 65px;
   font-weight: 500;
   padding-top: 30px;
 }
 #subtxt
 {
   font-family: garamond;
-  font-size: 45px;
+  font-size: 40px;
   font-weight: 500;
   padding-top: 5px;
 }
@@ -30,8 +30,8 @@ body
 }
 #cover
 {
-  /*width: 240px;*/
-  width: 100%;
+  width: 220px;
+  /*width: 100%;*/
   height: auto;
   align-content: center;
 }
@@ -85,17 +85,17 @@ body
 }
 .left
 {
-  flex: 15%;
+  flex: 18%;
   padding-right: 15px;
 }
 .right
 {
   flex: 80%;
-  padding-left: 10px;
+  padding-top: 20px;
 }
-@media (max-width: 800px)
+@media (max-width: 500px)
 {
-  .right, .left
+  .left, .right
   {
     flex: 100%;
   }
